# tnview

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  tnview_complexity_first_spec.md
.github/workflows/: ci.yml
docs/: cli_audit.md  integrations.md  release.md  status.md  telemetry.md  vision.md
docs/demo/: runlog-demo.txt
docs/releases/: v1.1.0.md
examples/: blocked_ladder.jsonl  dmrg_bad_run.jsonl  easy_chain.jsonl  ladder_snake_mismatch.jsonl  long_range_chi_limited.jsonl  quimb_mps_snapshot_example.py  quimb_tnoptimizer_example.py  quimb_tnoptimizer_run.jsonl  tebd_run.jsonl  tenpy_dmrg_observer_example.py
scripts/: demo_runlog.sh  setup_env.sh
tests/: test_cli.py  test_cli_output.py  test_diagnose.py  test_drift.py  test_events.py  test_example_scripts.py  test_examples.py  test_export.py  test_fixtures.py  test_focus.py  test_geometry.py  test_interactive.py  test_interface.py  test_logger.py  test_package_metadata.py  test_preview.py  test_quimb_adapter.py  test_recorder.py  test_runlog.py  test_runreplay.py  test_search.py  test_state.py  test_tail.py  test_tenpy_adapter.py  test_terminal.py  test_validate.py
tnview/: __init__.py  cli.py  cli_output.py  commands.py  compare.py  compute.py  diagnose.py  drift.py  events.py  examples.py  export.py  fixtures.py  focus.py  geometry.py  interactive.py  interface.py  logger.py  preview.py  recorder.py  render.py  runlog.py  runreplay.py  schema.py  search.py  snapshot.py  starter.py  state.py  tail.py  terminal.py  validate.py  warnings.py
tnview/adapters/: __init__.py  quimb.py  tenpy.py
